HAJ-1 fixed alignment issue

--- a/shj-admin-portal-web-fe/src/app/pages/printing-management/printing-request-add-update/step-one/step-one.component.scss
+++ b/shj-admin-portal-web-fe/src/app/pages/printing-management/printing-request-add-update/step-one/step-one.component.scss
@@ -3,3 +3,10 @@
     box-shadow: none;
   }
 }
+
+.selectAll_label span{
+  line-height: 1.72;
+  padding-top: 0.43rem;
+  padding-bottom: 0.43rem;
+  display: inline;
+}
